--- a/install
+++ b/install
@@ -46,7 +46,7 @@ require_one_installed() {
 }
 
 AW_PATH=$HOME/.vim-anywhere
-AW_URL='https://hub.fastgit.org/ysl2/vim-anywhere'
+AW_URL='https://github.com/kkredit/vim-anywhere'
 
 ###
 # pre-installation checks
@@ -73,10 +73,6 @@ if [[ $OSTYPE == "linux-gnu" ]]; then
   require_one_installed gconftool gsettings
   require_installed gvim
   require_installed xclip
-
-# OSX specific checks
-elif [[ $OSTYPE == "darwin"* ]]; then
-  require_installed mvim 'Run `brew install macvim`.'
 
 # Unsupported OS
 else
@@ -121,9 +117,6 @@ if [[ $OSTYPE == "linux-gnu" ]]; then
 
 # OSX install
 elif [[ $OSTYPE == "darwin"* ]]; then
-  # store the absolute path to the mvim executable
-  which mvim > $AW_PATH/.path
-
   # install the workflow as a service
   mkdir -p $HOME/Library/Services
   cp -R $AW_PATH/VimAnywhere.workflow $HOME/Library/Services
